--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/dg"
 url: "https://zacharyrnewton.github.io"
 
-markdown: kramdown
+#markdown: kramdown
 permalink: pretty
 plugins:
   - jekyll-feed
