--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 #baseurl: "/dg"
-url: "https://zacharyrnewton.github.io"
+url: "https://davidgurr.com"
 
 #markdown: kramdown
 permalink: pretty
