--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: David Gurr
 email: info@DavidGurr.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Visual communication is a powerful tool, yet we see it abused, misused, or wasted so often. I am a firm believer in the fact that design changes our world, for better or for worse. I feel a responsibility to the work I put out into the world, no matter how small the project may appear. My desire is to enrich society and our humanity by utilizing visual communication in a responsible, innovative, and unprecedented manner. If this excites you, as it should, then perhaps we should consider breaking ground on a new visual venture together. Here’s to a better world; a world filled with businesses, governments, and a populous that understands, respects, and demands a higher quality of design for ourselves and for our children.
 #baseurl: "/dg"
 url: "https://davidgurr.com"
 
